# aipaste

./: Makefile  README.md  aipaste.spec  pyproject.toml
.github/workflows/: release_github_action.yml
aipaste/: __init__.py  aipaste_source.md  main.py  test_aipaste.py
completions/: aipaste.bash  aipaste.zsh
